--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
         Transform your ideas into pixel-perfect creations. Join our community to
         explore the future of AI-powered design.
       </p>
-      <a href="https://discord.gg/pun2RKMD">
+      <a href="https://discord.gg/72QaqNZN">
         <button>Join Discord</button>
       </a>
     </div>
   </body>
 </html>
+
